# claude-code-guide

./: .gitignore  AI_Agent_完整入门指南.md  Claude_Hook_完整讲解.md  Claude_MCP_完整讲解.md  Claude_Subagent_完整讲解.md  Claude入门视频制作指南.md  NEW-2025-09-16投资收藏分析-全面加强版.md  README_CN.md  investment_analysis_agent.py  package-lock.json  package.json
.claude/: settings.local.json
.claude/agents/: code-reviewer.md  data-analysis-expert.md  investment_analyzer.md
agent/: AI_Agent_完整入门指南.md  AI_Agent_完整入门指南.md.bak  Claude_Subagent_完整讲解.md  Claude_Subagent_视频脚本.md  README.md  claude-subagent-guide.html  xiaohongshu-cover.html  构建高效AI智能体_Anthropic官方指南.md
mcp/: MCP全面解析指南.md  MCP完整指南-重构版.md  MCP完整指南-重构版.md.backup  视频脚本1-MCP基础概念与工作原理.md  视频脚本2-MCP技术深入与开发实战.md  视频脚本2-MCP技术深入机制.md  视频脚本3-MCP开发实战.md  视频脚本3-MCP部署配置与生态应用.md  视频脚本4-MCP部署配置与生态应用.md
mcp/demo/desktop-txt-stats/: .desktop_txt_server_full.py.swp  README.md  README_FULL.md  claude_config_example.json  claude_config_full_example.json  desktop_txt_server.py  desktop_txt_server_full.py  pyproject.toml  requirements.txt  run.py  run_full.py
mcp/demo/weather/: pyproject.toml  weather.py
mcp/demo/weather-server/: pyproject.toml
