[project]
name = "desktop-txt-stats"
version = "1.0.0"
description = "MCP服务器：统计和管理桌面txt文件"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0", 
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
